Update getFlow implementation Remove query to get list of flow id's from dialect interfaces